Edited README, main and stylesheets

--- a/app/assets/stylesheets/utils/_dimens.less
+++ b/app/assets/stylesheets/utils/_dimens.less
@@ -52,8 +52,8 @@
 //
 // Card
 //
-@card-border-radius: 2px;
-@card-title-padding: 24px;
-@card-action-padding: 8px;
+@card-padding: 16px;
+@card-border-radius: 5px;
+@card-title-padding: 16px;
+@card-action-padding: 16px;
 @card-text-padding: 16px;
-@card-border: 8px;
