--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -39,7 +39,8 @@
 
       <div class="c12">
         <div class="card">
-          <div class="card-title headline red text-white">
+          Card
+          <div class="card-title red">
             Card title
           </div>
           <div class="card-text body1">
