--- a/app/assets/stylesheets/components/_card.less
+++ b/app/assets/stylesheets/components/_card.less
@@ -3,20 +3,20 @@
   -webkit-border-radius: @card-border-radius;
   -moz-border-radius: @card-border-radius;
   border-radius: @card-border-radius;
-  border-width: @card-border;
   border-top-style: solid;
   border-bottom-style: solid;
   border-color: @grey_lighten_2;
+  padding: @card-padding
 }
 
 .card-title {
-  padding: @card-title-padding;
+  .headline;
 }
 
 .card-text {
-  padding: @card-text-padding;
+  .body1;
 }
 
 .card-action {
-  padding: @card-action-padding;
+  .body2;
 }
