Added Coupons, http and Logger; edited stylesheets

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -22,6 +22,8 @@ body {
 
 @media only screen and (max-width: 600px) and (orientation: portrait) {
   .toolbar;
+  .grid {
+  }
 }
 
 @media only screen and (max-width: 600px) and (orientation: landscape) {
