--- a/app/assets/stylesheets/utils/_colors.less
+++ b/app/assets/stylesheets/utils/_colors.less
@@ -49,6 +49,14 @@
   background-color: @red;
 }
 
+.lightBlue {
+  background-color: @lightBlue;
+}
+
+.blue {
+  background-color: @blue;
+}
+
 // Pink
 @pink_lighten_5: #FCE4EC;
 @pink_lighten_4: #F8BBD0;
