--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -30,16 +30,16 @@
 
       <!-- Toolbar / appbar-->
     <header class="toolbar title">
-
-      <img class="icon" src="@routes.Assets.at("images/favicon.ico")">
+      <a href="/">
+        <img class="icon" src="@routes.Assets.at("images/favicon.ico")">
+      </a>
     </header>
 
       <!-- Bottom sheet -->
     <div class="bottom-sheet">
-      
+
         <!-- Content -->
       @content
-
     </div>
   </body>
 
