Fixed logout; refactored and renamed code

--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -27,7 +27,7 @@
     </form>
 
     <!-- Sign up -->
-    <a href="@routes.Application.signup()">
+    <a href="@routes.Users.signup()">
       <input type="button" value="@Messages("signup.submit")">
     </a>
   }
