--- a/app/views/signup.scala.html
+++ b/app/views/signup.scala.html
@@ -9,7 +9,7 @@
     </div>
   }
 
-  <form method="post" id="signup" action="@routes.Users.signup">
+  <form method="post" id="signup" action="@routes.Users.create">
 
       <!-- Fullname -->
     <input type="text" name="fullname" id="fullname"
