--- a/app/views/global/errors.scala.html
+++ b/app/views/global/errors.scala.html
@@ -1,6 +1,6 @@
-@(throwable: Option[Throwable])
+@(username: Option[String])(throwable: Option[Throwable])
 
-@main {
+@main(username) {
 
   @if(throwable) {
     <div>
