--- a/app/views/global/notFound.scala.html
+++ b/app/views/global/notFound.scala.html
@@ -1,6 +1,6 @@
-@(error: Option[String])
+@(username: Option[String])(error: Option[String])
 
-@main {
+@main(username) {
 
   @if(error) {
     <div>
