Update stylesheets, README

--- a/app/assets/stylesheets/components/_card.less
+++ b/app/assets/stylesheets/components/_card.less
@@ -8,14 +8,16 @@
   border-top-style: solid;
   border-bottom-style: solid;
   border-color: @grey_lighten_2;
-  padding: @card-padding
+  margin-bottom: (@bottom-sheet-padding-mobile + @icon-padding) / 2;
 }
 
 .card-title {
+  padding: @card-padding;
   .headline;
 }
 
 .card-text {
+  padding: @card-padding;
   .body1;
 }
 
