--- a/app/assets/stylesheets/utils/_fonts.less
+++ b/app/assets/stylesheets/utils/_fonts.less
@@ -4,6 +4,8 @@
 @bold: 700;
 @ultra-bold: 900;
 
+@font-family: 'Roboto', sans-serif;
+
 .display4 {
   font-weight: @light;
   font-size: 9.333334rem;
