--- a/app/views/signup.scala.html
+++ b/app/views/signup.scala.html
@@ -14,17 +14,17 @@
       <!-- Fullname -->
     <input type="text" name="fullname" id="fullname"
     placeholder="@Messages("signup.fullname")"
-    value="@user.fullname" maxlength="35" required>
+    value="@user.fullname" maxlength="35" class="input" required> <br/>
 
       <!-- Username -->
     <input type="text" name="email" id="email"
     placeholder="@Messages("signup.email")"
-    value="@user.email" maxlength="35" required>
+    value="@user.email" maxlength="35" class="input" required> <br/>
 
       <!-- Password -->
     <input type="password" name="password" id="password"
     placeholder="@Messages("signup.password")"
-    value="@user.password" maxlength="35" required>
+    value="@user.password" maxlength="35" class="input" required> <br/>
 
       <!-- Submit -->
     <input type="submit" value="@Messages("signup.submit")">
