--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -6,10 +6,11 @@
 @import "components/_card.less";
 @import "components/_bottom-sheet.less";
 @import "components/_icon.less";
+@import "components/_input.less";
 
 html {
   line-height: 2;
-  font-family: 'Roboto', sans-serif;
+  font-family: @font-family;
   background-color: @grey_lighten_2;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
@@ -20,25 +21,46 @@ body {
 }
 
 @media only screen and (max-width: 600px) and (orientation: portrait) {
-  .toolbar;
-  .grid {
+  .toolbar {
+    padding: @toolbar-padding-tablet-desktop;
+    height: @toolbar-height-tablet-desktop;
+  }
+
+  .bottom-sheet {
+    padding: @bottom-sheet-padding-tablet-desktop + @icon-padding;
   }
 }
 
 @media only screen and (max-width: 600px) and (orientation: landscape) {
   .toolbar {
-    height: @toolbar-height-mobile-land;
+    padding: @toolbar-padding-tablet-desktop;
+    height: @toolbar-height-tablet-desktop;
+  }
+
+  .bottom-sheet {
+    padding: @bottom-sheet-padding-tablet-desktop + @icon-padding;
   }
 }
 
 @media only screen and (min-width: 601px) and (max-width: 992px) and (orientation: portrait) {
   .toolbar {
+    padding: @toolbar-padding-tablet-desktop;
+    height: @toolbar-height-tablet-desktop;
+  }
+
+  .bottom-sheet {
+    padding: @bottom-sheet-padding-tablet-desktop + @icon-padding;
   }
 }
 
 @media only screen and (min-width: 601px) and (max-width: 992px) and (orientation: landscape) {
   .toolbar {
-    height: @toolbar-height-mobile-land;
+    padding: @toolbar-padding-tablet-desktop;
+    height: @toolbar-height-tablet-desktop;
+  }
+
+  .bottom-sheet {
+    padding: @bottom-sheet-padding-tablet-desktop + @icon-padding;
   }
 }
 
